maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:65: error: value =- is not a member of Int
			case Direction.NORD => i=0;j=-1
                                                    ^JediEscaper:66: error: value =+ is not a member of Int
			case Direction.SUD => i=0;j=+1
                                                   ^JediEscaper:67: error: value =+ is not a member of Int
			case Direction.EST=> i=+1;j=0
                                              ^JediEscaper:68: error: value =- is not a member of Int
			case Direction.NORD => i=-1;j=0
                                                ^